[package]
name = "dodrio-ext"
version = "0.1.0"
authors = ["Raymond <extraymond@gmail.com>"]
edition = "2018"
description = "Extension that helps(me at least) increasing productivity when developing webapp ontop of dodrio and typed-html."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.58", features = ["serde"] }
dodrio = { git= "https://github.com/fitzgen/dodrio" }
wasm-bindgen-futures = "0.4.8"
typed-html = { features = ["dodrio_macro"], version = "0.2.2" }
js-sys = "0.3.35"
log = "0.4.8"
cfg-if = "0.1.10"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
async-trait = "0.1.24"
futures = "0.3.4"
thiserror = "1.0.10"
anyhow = "1.0.26"
futures-timer ={ version =  "3.0.1", features = ["wasm-bindgen"]}

[dependencies.web-sys]
version = "0.3.35"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "Worker",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"
femme = "1.3.0"
gloo = "0.2.0"

[features]
default = ["console_error_panic_hook"]
release = ["console_error_panic_hook", "wee_alloc"]
