[package]
name = "afterglow"
version = "0.1.0"
authors = ["Raymond <extraymond@gmail.com>"]
edition = "2018"
description = "A rust front-end framework built on typed-html and dodrio. Use trait objects to decouple view/mutation behaviour and data model."
readme = "./README.md"
repository = "https://github.com/extraymond/afterglow"
license = "MPL-2.0"
categories = ["wasm", "front-end"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.59", features = ["serde"] }
dodrio = { git= "https://github.com/fitzgen/dodrio" }
wasm-bindgen-futures = "0.4.9"
typed-html = { features = ["dodrio_macro"], version = "0.2.2" }
js-sys = "0.3.36"
log = "0.4.8"
cfg-if = "0.1.10"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
futures = "0.3.4"
gloo = "0.2.0"
async-trait = "0.1.24"

[dependencies.web-sys]
version = "0.3.36"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "Worker",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.9"
femme = "1.3.0"
gloo = "0.2.0"

[features]
default = ["console_error_panic_hook"]
release = ["console_error_panic_hook", "wee_alloc"]

[workspace]
members = [
  "examples/buttons",
  "examples/tables"
]
