[package]
name = "afterglow-router"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
afterglow = { path = "../afterglow" }
uuid = { version = "0.8.1", features = ["v4"]}
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.9"
