[package]
name = "afterglow-router"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
afterglow = { path = "../afterglow" }
web-sys = { version = "0.3.36", features = ["HashChangeEvent", "PopStateEvent", "History", "PopStateEventInit", "CustomEvent", "CustomEventInit"]}
url = "2.1.1"
log = "0.4.8"
femme = "1.3.0"
async_executors = { version = "0.2.0", features = ["bindgen", "spawn_handle"]}
async-trait = "0.1.24"
serde-wasm-bindgen = "0.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.9"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"]}
