[package]
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"
name = "afterglow-router"
version = "0.1.2-alpha.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
afterglow = {path = "../afterglow"}
async-trait = "0.1.24"
femme = "1.3.0"
log = "0.4.8"
url = "2.1.1"
web-sys = {version = "0.3.45", features = ["HashChangeEvent", "PopStateEvent", "History", "PopStateEventInit", "CustomEvent", "CustomEventInit"]}

[dev-dependencies]
futures-timer = {version = "3.0.2", features = ["wasm-bindgen"]}
wasm-bindgen-test = "0.3.18"
