[package]
name = "afterglow-worker"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-test = "0.3.18"
log = "0.4.8"
femme = "1.3.0"
web-sys = { version = "0.3.45", features = ["WorkerGlobalScope", "MessageEvent", "DedicatedWorkerGlobalScope", "Blob", "WorkerOptions", "Url", "BlobPropertyBag", "Location", "HtmlCanvasElement", "Document", "CanvasRenderingContext2d", "ImageData", "ImageBitmap"] }
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
futures = "0.3.4"
gloo = "0.2.1"
async_executors ={ version = "0.3.0", features= ["bindgen", "spawn_handle"]}
serde-wasm-bindgen = "0.1.3"
anyhow = "1.0.28"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
