[package]
authors = ["Raymond <extraymond@gmail.com>"]
categories = ["wasm"]
description = "A rust front-end framework built on typed-html and dodrio. Use trait objects to decouple view/mutation behaviour and data model."
edition = "2018"
license = "Apache-2.0/MIT"
name = "afterglow"
readme = "../README.md"
repository = "https://github.com/extraymond/afterglow"
version = "0.1.4-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dodrio = {version = "0.2.0"}
wasm-bindgen = { version = "0.2.68", features = ["serde"] }

typed-html = {features = ["dodrio_macro"], git = "https://github.com/bodil/typed-html"}
wasm-bindgen-futures = "0.4.18"

async-trait = "0.1.24"
async_executors = {version = "0.2.0", default-features = false, features = ["bindgen", "spawn_handle"]}
cfg-if = "0.1.10"
console_error_panic_hook = {version = "0.1.6", optional = true}
futures = "0.3.4"
gloo = "0.2.1"
js-sys = "0.3.45"
log = "0.4.8"
wee_alloc = {version = "0.4.5", optional = true}

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "Worker",
]
version = "0.3.45"

[dev-dependencies]
femme = "2.1.1"
gloo = "0.2.1"
wasm-bindgen-test = "0.3.18"

[features]
default = ["console_error_panic_hook"]
release = ["console_error_panic_hook", "wee_alloc"]
