[package]
authors = ["Raymond <extraymond@gmail.com>"]
categories = ["wasm"]
description = "A rust front-end framework built on typed-html and dodrio. Use trait objects to decouple view/mutation behaviour and data model."
edition = "2018"
license = "Apache-2.0/MIT"
name = "afterglow"
readme = "../README.md"
repository = "https://github.com/extraymond/afterglow"
version = "0.3.1-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dodrio = {version = "0.2.0"}
wasm-bindgen = {version = "0.2.68", features = ["serde"]}
wasm-bindgen-futures = "0.4.18"

async-std = {version = "1.6.5", features = ["unstable"]}
async-trait = "0.1.41"
futures = "0.3.7"
gloo = "0.3.0"
js-sys = "0.3.45"
log = "0.4.11"

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', "Worker"]
version = "0.3.45"

[dev-dependencies]
femme = "2.1.1"
gloo = "0.3.0"
wasm-bindgen-test = "0.3.18"
