[package]
name = "buttons"
version = "0.1.1"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
afterglow = { path = "../../afterglow" }
web-sys = { version = "0.3.45", features = ["HtmlHeadElement"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
anyhow = "1.0.27"
