[package]
name = "msg_bus"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
afterglow = { path = "../../afterglow" }
web-sys = { version = "0.3.45", features = ["HtmlHeadElement", "NodeList"] }
afterglow-router = { path = "../../afterglow-router/" }
log = "0.4.8"
femme = "1.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
